apps/guardrail-web/overlays/development/ingress-host-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guardrail-web
spec:
  rules:
    - host: crashes-dev.workrave.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guardrail-web
                port:
                  number: 80
  tls:
    - hosts:
        - crashes-dev.workrave.org
      secretName: guardrail-web-tls
